--- a/app.json
+++ b/app.json
@@ -3,6 +3,11 @@
     "name": "unipaperapp",
     "slug": "unipaperapp",
     "version": "1.0.0",
+    
+    "assetBundlePatterns": ["**/*"],
+    "platforms": [
+      "android"
+    ],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -17,7 +22,8 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "package": "com.yourapp.unipaperapp"
       }
     },
     "web": {
